project(
  '14_SpreadsheetCellMemberFunctionOverloading_2',
  'cpp',
  version: '0.1',
  default_options: ['warning_level=3', 'cpp_std=c++23'],
)

executable(
  '14_SpreadsheetCellMemberFunctionOverloading_2',
  'Spreadsheet.cpp',
  'SpreadsheetCell.cpp',
  'SpreadsheetTest.cpp',
  install: true,
)
