project(
           '05_WeatherPrediction',
           'cpp',
           version: '0.1',
           default_options: ['warning_level=3', 'cpp_std=c++23'],
)

executable(
           '05_WeatherPrediction',
           'test.cpp',
           'MyWeatherPrediction.cpp',
           'WeatherPrediction.cpp',
           install: true,
)
