project(
           '11_FunctionTemplate',
           'cpp',
           version: '0.1',
           default_options: ['warning_level=3', 'cpp_std=c++23'],
)

executable(
           '11_FunctionTemplate',
           # '01_FindTemplate.cpp',
           'SpreadsheetCell.cpp',
           '02_FindTemplateOverload.cpp',
           install: true,
)
